index modified for tables

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>bienvenido</h1>
+    <h1>Bienvenido a mi sitio web</h1>
+    <span>esta web tiene tiene como finalidad aprender etiquetas de HTML</span>
+    <ul>
+        <li><a href="html/tablas.html">ver tablas</a></li>
+    </ul>
 </body>
 </html>
