file tables modified

--- a/html/tablas.html
+++ b/html/tablas.html
@@ -9,5 +9,41 @@
 <body>
     <h1>Bienvenido a tablas</h1>
     <a href = "../index.html">volver atras</a>
-</body>
+    <table border="1">
+        <thead>
+            <tr>
+                <th>country</th>
+                <th>points</td>
+                <th>position</td>
+                <th>shield</td>
+            </tr>    
+        </thead>
+        <tbody>
+            <tr>
+                <td>colombia</td>
+                <td>15</td>
+                <td>1</td>
+                <td><img src="../img/Escudo_de_la_Federación_Colombiana_de_Fútbol.png"alt ="escudo de colombia" width="50px" height="50px"></td>
+            </tr>
+            <tr>
+                <td>brasil</td>
+                <td>13</td>
+                <td>2</td>
+                <td><img src="https://as01.epimg.net/img/comunes/fotos/fichas/equipos/large/1881.png"alt ="escudo de brasil" width="50px" height="50px"></td>
+            </tr>
+            <tr>
+                <td>uruguay</td>
+                <td>9</td>
+                <td>3</td>
+                <td><img src="https://seeklogo.com/images/A/asociacion-uruguaya-de-futbol-logo-8AE2DF5DB7-seeklogo.com.png"alt ="escudo de uruguay"width="50px" height="50px"></td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="4">tabla de posiciones</td>
+            </tr>
+        </tfoot>
+        <caption>tabla de posiciones</caption>
+    </table>
+    <iframe width="1000" height="600" src="https://www.youtube.com/embed/GMLOZ2Tx0Bc" title="Neymar Craziest Skills Ever for Brazil" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></body>
 </html>
