--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <h1>Bienvenido a mi sitio web</h1>
     <span>esta web tiene tiene como finalidad aprender etiquetas de HTML</span>
     <ul>
-        <li><a href="html/tablas.html">ver tablas</a></li>
+        <li><a href="html/tablas.html">ver tablas</a></li> 
+        <li><a href="html/multimedia.html">ver multimedia</a></li> 
     </ul>
 </body>
 </html>
